chore: add publishConfig to existing packages [skip ci]

--- a/packages/biome-config/package.json
+++ b/packages/biome-config/package.json
@@ -1,5 +1,8 @@
 {
     "name": "@omni-oss/biome-config",
+    "publishConfig": {
+        "access": "public"
+    },
     "version": "0.1.0",
     "description": "",
     "keywords": [],
