--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -10,6 +10,9 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
+    "publishConfig": {
+        "access": "public"
+    },
     "devDependencies": {
         "typescript": "^5.9.3"
     },
