--- a/packages/vite-config/package.json
+++ b/packages/vite-config/package.json
@@ -8,6 +8,9 @@
             "require": "./src/*.ts"
         }
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "peerDependencies": {
         "vite": "^6.3.2"
     },
