--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -14,6 +14,9 @@
             }
         }
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {},
     "devDependencies": {
         "@omni-oss/tsconfig": "workspace:*",
