--- a/packages/system-interface/package.json
+++ b/packages/system-interface/package.json
@@ -14,6 +14,9 @@
             }
         }
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "dependencies": {
         "memfs": "^4.56.10"
     },
