--- a/packages/vitest-config/package.json
+++ b/packages/vitest-config/package.json
@@ -12,6 +12,9 @@
         "vite": "^7.3.1",
         "vitest": "^4.0.18"
     },
+    "publishConfig": {
+        "access": "public"
+    },
     "devDependencies": {
         "unplugin-dts": "^1.0.0-beta.6",
         "vite-tsconfig-paths": "^6.0.5",
