--- a/cog.toml
+++ b/cog.toml
@@ -440,7 +440,7 @@ include = ["packages/vitest-config/**"]
 public_api = false
 
 [packages.root]
-bump_order = 1000
+bump_order = 10000
 path = "."
 changelog_path = "CHANGELOG.root.md"
 include = [
@@ -459,5 +459,6 @@ include = [
 ]
 public_api = false
 pre_bump_hooks = [
+    "bun install",
     "git add package.json bun.lock Cargo.toml Cargo.lock",
 ]
