chore: tolerate package republish [skip ci]

--- a/omni/presets/ts-lib.omni.yaml
+++ b/omni/presets/ts-lib.omni.yaml
@@ -6,7 +6,7 @@ extends:
 
 tasks:
   publish:
-    command: bun publish
+    command: bun publish --tolerate-republish
     dependencies:
       - build
 
