--- a/packages/async-utils/project.omni.yaml
+++ b/packages/async-utils/project.omni.yaml
@@ -13,3 +13,9 @@ tasks:
 
   test:integration:
     enabled: false
+
+
+dependencies:
+  - "@omni-oss/tsconfig"
+  - "@omni-oss/vite-config"
+  - "@omni-oss/vitest-config"
