--- a/packages/biome-config/project.omni.yaml
+++ b/packages/biome-config/project.omni.yaml
@@ -1,2 +1,5 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: biome-config
+name: "@omni-oss/biome-config"
+
+tasks:
+  publish: bun publish --tolerate-republish
