--- a/packages/channels/project.omni.yaml
+++ b/packages/channels/project.omni.yaml
@@ -13,3 +13,8 @@ tasks:
 
   test:integration:
     enabled: false
+
+dependencies:
+  - "@omni-oss/tsconfig"
+  - "@omni-oss/vite-config"
+  - "@omni-oss/vitest-config"
