--- a/scripts/set-version/project.omni.yaml
+++ b/scripts/set-version/project.omni.yaml
@@ -2,9 +2,7 @@
 name: "@omni-oss/set-version"
 
 extends:
-
   - "@workspace/omni/presets/ts-vite-script.omni.yaml"
-
 
 tasks:
   test:unit:
@@ -23,4 +21,7 @@ tasks:
     enabled: true
 
 meta:
-  publish: false
+  publish: true
+
+dependencies:
+  - "@omni-oss/system-interface"
