--- a/scripts/set-version/tsconfig.types.json
+++ b/scripts/set-version/tsconfig.types.json
@@ -1,3 +1,3 @@
 {
-    "extends": ["@omni-oss/tsconfig/types.json", "./tsconfig.project.json"],
+    "extends": ["@omni-oss/tsconfig/types.json", "./tsconfig.project.json"]
 }
