chore: use ^ for workspace package version [skip ci]

--- a/packages/bridge-rpc-router/package.json
+++ b/packages/bridge-rpc-router/package.json
@@ -15,16 +15,16 @@
         }
     },
     "dependencies": {
-        "@omni-oss/channels": "workspace:*",
-        "@omni-oss/bridge-rpc": "workspace:*"
+        "@omni-oss/channels": "workspace:^",
+        "@omni-oss/bridge-rpc": "workspace:^"
     },
     "publishConfig": {
         "access": "public"
     },
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:*",
-        "@omni-oss/vite-config": "workspace:*",
-        "@omni-oss/vitest-config": "workspace:*",
+        "@omni-oss/tsconfig": "workspace:^",
+        "@omni-oss/vite-config": "workspace:^",
+        "@omni-oss/vitest-config": "workspace:^",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
         "typescript": "^5.9.3",
