--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "@omni-oss/root",
     "version": "0.3.0",
     "dependencies": {
-        "@omni-oss/biome-config": "workspace:*",
-        "@omni-oss/tsconfig": "workspace:*",
+        "@omni-oss/biome-config": "workspace:^",
+        "@omni-oss/tsconfig": "workspace:^",
         "@biomejs/biome": "^2.3.14",
-        "@omni-oss/summarize-results": "workspace:*",
-        "@omni-oss/set-version": "workspace:*",
+        "@omni-oss/summarize-results": "workspace:^",
+        "@omni-oss/set-version": "workspace:^",
         "@microsoft/api-extractor": "^7.56.2",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
