--- a/packages/bridge-rpc/package.json
+++ b/packages/bridge-rpc/package.json
@@ -48,8 +48,8 @@
         }
     },
     "dependencies": {
-        "@omni-oss/async-utils": "workspace:*",
-        "@omni-oss/channels": "workspace:*",
+        "@omni-oss/async-utils": "workspace:^",
+        "@omni-oss/channels": "workspace:^",
         "@msgpack/msgpack": "^3.1.3",
         "zod": "^4.3.6",
         "async-mutex": "^0.5.0"
@@ -58,9 +58,9 @@
         "access": "public"
     },
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:*",
-        "@omni-oss/vite-config": "workspace:*",
-        "@omni-oss/vitest-config": "workspace:*",
+        "@omni-oss/tsconfig": "workspace:^",
+        "@omni-oss/vite-config": "workspace:^",
+        "@omni-oss/vitest-config": "workspace:^",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
         "typescript": "^5.9.3",
