--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -19,9 +19,9 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "@omni-oss/tsconfig": "workspace:*",
-        "@omni-oss/vite-config": "workspace:*",
-        "@omni-oss/vitest-config": "workspace:*",
+        "@omni-oss/tsconfig": "workspace:^",
+        "@omni-oss/vite-config": "workspace:^",
+        "@omni-oss/vitest-config": "workspace:^",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
         "typescript": "^5.9.3",
