--- a/packages/vite-config/package.json
+++ b/packages/vite-config/package.json
@@ -17,6 +17,6 @@
     "devDependencies": {
         "unplugin-dts": "^1.0.0-beta.6",
         "vite-tsconfig-paths": "^6.0.5",
-        "@omni-oss/tsconfig": "workspace:*"
+        "@omni-oss/tsconfig": "workspace:^"
     }
 }
