--- a/packages/vitest-config/package.json
+++ b/packages/vitest-config/package.json
@@ -18,7 +18,7 @@
     "devDependencies": {
         "unplugin-dts": "^1.0.0-beta.6",
         "vite-tsconfig-paths": "^6.0.5",
-        "@omni-oss/tsconfig": "workspace:*",
-        "@omni-oss/vite-config": "workspace:*"
+        "@omni-oss/tsconfig": "workspace:^",
+        "@omni-oss/vite-config": "workspace:^"
     }
 }
