chore(@omni-oss/set-version): update project dependencies [skip ci]

--- a/scripts/set-version/project.omni.yaml
+++ b/scripts/set-version/project.omni.yaml
@@ -24,4 +24,7 @@ meta:
   publish: true
 
 dependencies:
+  - "@omni-oss/tsconfig"
+  - "@omni-oss/vite-config"
+  - "@omni-oss/vitest-config"
   - "@omni-oss/system-interface"
