--- a/omni/presets/rust-multiplatform.omni.yaml
+++ b/omni/presets/rust-multiplatform.omni.yaml
@@ -52,4 +52,10 @@ tasks:
       - test
 
 meta:
-  type: cli
+  targets:
+    - aarch64-unknown-linux-gnu
+    - x86_64-unknown-linux-gnu
+    - x86_64-apple-darwin
+    - aarch64-apple-darwin
+    - x86_64-pc-windows-msvc
+    - aarch64-pc-windows-msvc
