--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@biomejs/biome": "^2.3.14",
         "@omni-oss/summarize-results": "workspace:^",
         "@omni-oss/set-version": "workspace:^",
+        "@omni-oss/create-jobs": "workspace:^",
         "@microsoft/api-extractor": "^7.56.2",
         "vite": "^7.3.1",
         "vitest": "^4.0.18",
