--- a/services/omni_remote_cache_service/project.omni.yaml
+++ b/services/omni_remote_cache_service/project.omni.yaml
@@ -36,6 +36,20 @@ tasks:
     dependencies:
       - ^passthrough
 
+meta:
+  targets:
+    x86_64-unknown-linux-gnu:
+      runner: ubuntun-latest
+    aarch64-unknown-linux-gnu:
+      runner: ubuntu-latest
+      # build_flags: --feature vendored-openssl
+    x86_64-apple-darwin:
+      runner: macos-latest
+    aarch64-apple-darwin:
+      runner: macos-latest
+    x86_64-pc-windows-msvc:
+      runner: windows-latest
+
 dependencies:
   - omni_remote_cache_storage
   - omni_tracing_subscriber
