--- a/cog.toml
+++ b/cog.toml
@@ -464,6 +464,7 @@ include = [
 ]
 public_api = false
 pre_bump_hooks = [
-    "bun install",
+    "rm bun.lock",
+    "bun install --lockfile-only",
     "git add package.json bun.lock Cargo.toml Cargo.lock",
 ]
