chore(@omni-oss/summarize-results): remove unused fields in schemas [skip ci]

--- a/scripts/summarize-results/package.json
+++ b/scripts/summarize-results/package.json
@@ -2,7 +2,7 @@
     "name": "@omni-oss/summarize-results",
     "version": "0.0.0-semantically-released",
     "scripts": {
-        "build": "bun run ./build.ts"
+        "build": "bun run ./src/build.ts"
     },
     "bin": "./bin/index.js",
     "exports": {
