--- a/.github/actions/determine-build-tools-js/action.yaml
+++ b/.github/actions/determine-build-tools-js/action.yaml
@@ -1,5 +1,5 @@
-name: "Determine Build Steps JS"
-description: "Processes build aggregation data to determine required installation and build steps."
+name: "Determine Build Tools JS"
+description: "Processes build aggregation data to determine required installation."
 inputs:
   build_data_json:
     description: "The JSON string of the aggregated build results."
@@ -9,10 +9,7 @@ outputs:
     description: 'Output "true" if any Rust task did NOT complete with a cache hit.'
   INSTALL_JS_TOOLS:
     description: 'Output "true" if any TypeScript task did NOT complete with a cache hit.'
-  BUILD_ORCS:
-    description: 'Output "true" if the "omni_remote_cache_service" project did NOT complete with a cache hit.'
-  BUILD_OMNI:
-    description: 'Output "true" if the "omni" project did NOT complete with a cache hit.'
+
 runs:
   using: "node20"
   main: "index.js"
