--- a/.github/actions/determine-build-tools/action.yaml
+++ b/.github/actions/determine-build-tools/action.yaml
@@ -1,4 +1,4 @@
-name: "Determine Build Steps"
+name: "Determine Build Tools"
 description: "Checks out the repo and then runs the JS action to determine build steps. Assumes omni is installed and code is checked out."
 
 inputs:
@@ -21,12 +21,6 @@ outputs:
   INSTALL_JS_TOOLS:
     description: "Output of the JS action."
     value: ${{ steps.determine.outputs.INSTALL_JS_TOOLS }}
-  BUILD_ORCS:
-    description: "Output of the JS action."
-    value: ${{ steps.determine.outputs.BUILD_ORCS }}
-  BUILD_OMNI:
-    description: "Output of the JS action."
-    value: ${{ steps.determine.outputs.BUILD_OMNI }}
 
 runs:
   using: "composite"
