feat: add meta to template context

--- a/crates/omni_task_context/Cargo.toml
+++ b/crates/omni_task_context/Cargo.toml
@@ -24,3 +24,4 @@ omni_core = { workspace = true }
 omni_types = { workspace = true }
 omni_hasher = { workspace = true }
 omni_tera = { workspace = true }
+omni_configurations = { workspace = true }
