--- a/apps/site/components.json
+++ b/apps/site/components.json
@@ -1,21 +1,15 @@
 {
-  "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
-  "rsc": false,
-  "tsx": true,
-  "tailwind": {
-    "config": "",
-    "css": "src/styles/app.css",
-    "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": ""
-  },
-  "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
-    "lib": "@/lib",
-    "hooks": "@/hooks"
-  },
-  "iconLibrary": "lucide"
+    "$schema": "https://park-ui.com/schema/components.json",
+    "framework": "solid",
+    "panda": {
+        "config": "panda.config.ts"
+    },
+    "aliases": {
+        "components": "~/components",
+        "hooks": "~/hooks",
+        "lib": "~/lib",
+        "recipes": "~/theme/recipes",
+        "theme": "~/theme",
+        "ui": "~/components/ui"
+    }
 }
