--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "@omni-oss/site",
+    "name": "site",
     "private": true,
-    "sideEffects": false,
+    "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "prepare": "panda codegen",
         "dev": "vite dev",
         "build": "vite build && tsc --noEmit",
         "preview": "bun x serve ./.vercel/output/static",
@@ -11,35 +12,27 @@
         "gen:refdocs": "bun run ./scripts/generate-references ./omni-declspec.json ./content/docs/references"
     },
     "dependencies": {
-        "@orama/orama": "^3.1.18",
-        "@tanstack/react-router": "^1.158.0",
-        "@tanstack/react-router-devtools": "^1.158.0",
-        "@tanstack/react-start": "=1.158.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "commander": "^14.0.3",
-        "fumadocs-core": "16.5.0",
-        "fumadocs-mdx": "14.2.6",
-        "fumadocs-ui": "16.5.0",
-        "lucide-react": "^0.563.0",
-        "lucide-static": "^0.563.0",
-        "react": "^19.2.4",
-        "react-dom": "^19.2.4",
-        "tailwind-merge": "^3.4.0",
+        "@ark-ui/solid": "^5.31.0",
+        "@tanstack/router-plugin": "^1.158.4",
+        "@tanstack/solid-router": "^1.159.1",
+        "@tanstack/solid-router-devtools": "^1.159.1",
+        "@tanstack/solid-router-ssr-query": "^1.159.1",
+        "@tanstack/solid-start": "^1.159.1",
+        "lucide-solid": "^0.563.0",
+        "solid-js": "^1.9.11",
         "vite": "^7.3.1",
-        "nitro": "^3.0.1-alpha.2",
+        "vite-plugin-lucide-preprocess": "^1.4.6",
+        "vite-tsconfig-paths": "^6.1.0",
         "zod": "^4.3.6"
     },
     "devDependencies": {
-        "@commander-js/extra-typings": "14.0.0",
-        "@tailwindcss/vite": "^4.1.18",
-        "@types/node": "^25.2.0",
-        "@types/react": "^19.2.11",
-        "@types/react-dom": "^19.2.3",
-        "@vitejs/plugin-react": "^5.1.3",
-        "tailwindcss": "^4.1.18",
-        "tw-animate-css": "^1.4.0",
+        "@pandacss/dev": "^1.8.1",
+        "@tanstack/devtools-vite": "^0.5.1",
         "typescript": "^5.9.3",
-        "vite-tsconfig-paths": "^6.0.5"
+        "vite": "^7.3.1",
+        "vite-plugin-solid": "^2.11.10",
+        "nitro": "^3.0.1-alpha.2",
+        "@commander-js/extra-typings": "^14.0.0",
+        "srvx": "^0.11.2"
     }
 }
