--- a/apps/site/.gitignore
+++ b/apps/site/.gitignore
@@ -7,7 +7,20 @@ dist-ssr
 .nitro
 .tanstack
 .wrangler
+content/*
+.vercel
+.output
+dist
 
 ## Panda
-styled-system
+styled-system/css
+styled-system/jsx
+styled-system/patterns
+styled-system/recipes
+styled-system/tokens
+styled-system/types
+styled-system/helpers.mjs
+
 styled-system-studio
+
+omni-declspec.json
