--- a/.github/workflows/manual-release-omni.yaml
+++ b/.github/workflows/manual-release-omni.yaml
@@ -23,7 +23,9 @@ jobs:
       - name: Setup Tools
         uses: ./.github/actions/setup-tools
         with:
-          install-all: true
+          install-all: false
+          install-rust: true
+          install-rust-target: true
 
       - name: Test
         run: cargo test --workspace --exclude omni_remote_cache_client
@@ -72,7 +74,9 @@ jobs:
       - name: Setup Tools
         uses: ./.github/actions/setup-tools
         with:
-          install-all: true
+          install-all: false
+          install-rust: true
+          install-rust-target: true
           cache-key-prefix: ${{ matrix.target }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
