--- a/.github/workflows/run-omni-jobs.yaml
+++ b/.github/workflows/run-omni-jobs.yaml
@@ -22,6 +22,10 @@ on:
         required: false
         default: global
         type: string
+      cache-restore-key-prefixes:
+        description: The prefix to use for the cache restore key
+        required: false
+        type: string
 
   workflow_dispatch:
     inputs:
@@ -43,6 +47,10 @@ on:
         description: The prefix to use for the cache key
         required: false
         default: global
+        type: string
+      cache-restore-key-prefixes:
+        description: The prefix to use for the cache restore key
+        required: false
         type: string
 
 jobs:
@@ -69,6 +77,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           cache-key-prefix: ${{ inputs.cache-key-prefix }}
+          cache-restore-key-prefixes: ${{ inputs.cache-restore-key-prefixes }}
 
       - name: Determine Build Tools
         id: determine
