--- a/cli/omni/project.omni.yaml
+++ b/cli/omni/project.omni.yaml
@@ -5,29 +5,19 @@ extends:
   - "@workspace/omni/presets/rust-cli.omni.yaml"
 
 tasks:
-  build:
-    output:
-      files:
-        - "@workspace/target/release/omni"
+  build:aarch64-unknown-linux-gnu:
+    env:
+      vars:
+        RUST_BUILD_ADDITIONAL_ARGS: --features vendored-openssl
+
+  test:aarch64-unknown-linux-gnu:
+    env:
+      vars:
+        RUST_TEST_ADDITIONAL_ARGS: --features vendored-openssl
 
   profile:
     dependencies:
       - ^passthrough
-
-meta:
-  targets:
-    x86_64-unknown-linux-gnu:
-      runner: ubuntu-latest
-    aarch64-unknown-linux-gnu:
-      runner: ubuntu-latest
-      build_flags: --features vendored-openssl
-      test_flags: --features vendored-openssl
-    x86_64-apple-darwin:
-      runner: macos-latest
-    aarch64-apple-darwin:
-      runner: macos-latest
-    x86_64-pc-windows-msvc:
-      runner: windows-latest
 
 dependencies:
   - omni_cli_core
