--- a/omni/presets/rust-multiplatform.omni.yaml
+++ b/omni/presets/rust-multiplatform.omni.yaml
@@ -11,51 +11,238 @@ cache:
         - RUST_TARGET
 
 tasks:
-  test:
+  test:aarch64-unknown-linux-gnu:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-unknown-linux-gnu') }}"
+    command: cross test --target aarch64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:aarch64-unknown-linux-gnu
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
     cache:
       key:
         env:
-          append:
-            - RUST_TEST_ADDITIONAL_ARGS
-    command: >
-      {% if env.RUST_TARGET %}
-        {% if env.RUST_TARGET == "" %}
-          cargo test -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
-        {% elif env.RUST_TARGET == "aarch64-unknown-linux-gnu" %}
-          cross test --target ${RUST_TARGET} -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
-        {% else %}
-          cargo test --target ${RUST_TARGET} -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
-        {% endif %}
-      {% else %}
-        cargo test -p ${PROJECT_NAME} ${RUST_TEST_ADDITONAL_ARGS:-}
-      {% endif %}
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:x86_64-unknown-linux-gnu:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-unknown-linux-gnu') }}"
+    command: cargo test --target x86_64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:x86_64-unknown-linux-gnu
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:x86_64-apple-darwin:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-apple-darwin') }}"
+    command: cargo test --target x86_64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:x86_64-apple-darwin
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:aarch64-apple-darwin:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-apple-darwin') }}"
+    command: cargo test --target aarch64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:aarch64-apple-darwin
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:x86_64-pc-windows-msvc:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-pc-windows-msvc') }}"
+    command: cargo test --target x86_64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:x86_64-pc-windows-msvc
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:aarch64-pc-windows-msvc:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-pc-windows-msvc') }}"
+    command: cargo test --target aarch64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:aarch64-pc-windows-msvc
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:current:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-pc-windows-msvc') }}"
+    command: cargo test -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^test:current
+    env:
+      vars:
+        # RUST_LOG_SPAN_EVENTS: new,close
+        RUST_LOG: trace
+    cache:
+      key:
+        env:
+          append: [RUST_TEST_ADDITIONAL_ARGS]
+        files:
+          append: ["./tests/**/*.rs"]
+
+  test:
+    command: "echo 'Test completed'"
+    dependencies:
+      - ^test
+      - test:current
+      - test:aarch64-unknown-linux-gnu
+      - test:x86_64-unknown-linux-gnu
+      - test:x86_64-apple-darwin
+      - test:aarch64-apple-darwin
+      - test:x86_64-pc-windows-msvc
+      - test:aarch64-pc-windows-msvc
+
+  build:aarch64-unknown-linux-gnu:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-unknown-linux-gnu') }}"
+    command: cross build --target aarch64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/aarch64-unknown-linux-gnu/release/${PROJECT_NAME}"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:x86_64-unknown-linux-gnu:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-unknown-linux-gnu') }}"
+    command: cargo build --target x86_64-unknown-linux-gnu -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/x86_64-unknown-linux-gnu/release/${PROJECT_NAME}"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:x86_64-apple-darwin:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-apple-darwin') }}"
+    command: cargo build --target x86_64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/x86_64-apple-darwin/release/${PROJECT_NAME}"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:aarch64-apple-darwin:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-apple-darwin') }}"
+    command: cargo build --target aarch64-apple-darwin -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/aarch64-apple-darwin/release/${PROJECT_NAME}"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:x86_64-pc-windows-msvc:
+    enabled: "{{ env.RUST_TARGET is containing('x86_64-pc-windows-msvc') }}"
+    command: cargo build --target x86_64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/x86_64-pc-windows-msvc/release/${PROJECT_NAME}.exe"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:aarch64-pc-windows-msvc:
+    enabled: "{{ env.RUST_TARGET is containing('aarch64-pc-windows-msvc') }}"
+    command: cargo build --target aarch64-pc-windows-msvc -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    output:
+      files:
+        - "@workspace/target/aarch64-pc-windows-msvc/release/${PROJECT_NAME}.exe"
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
+
+  build:current:
+    enabled: "{{ not env.RUST_TARGET or env.RUST_TARGET == '' }}"
+    command: cargo build -p ${PROJECT_NAME} ${RUST_TEST_ADDITIONAL_ARGS:-}
+    dependencies:
+      - ^build:current
+    cache:
+      key:
+        env:
+          append: [RUST_BUILD_ADDITIONAL_ARGS]
 
   build:
-    cache:
-      key:
-        env:
-          append:
-            - RUST_BUILD_ADDITIONAL_ARGS
-    command: >
-      {% if env.RUST_TARGET %}
-        {% if env.RUST_TARGET == "" %}
-          cargo build -p ${PROJECT_NAME} ${RUST_BUILD_ADDITIONAL_ARGS:-}
-        {% elif env.RUST_TARGET == "aarch64-unknown-linux-gnu" %}
-          cross build --target ${RUST_TARGET} -p ${PROJECT_NAME} ${RUST_BUILD_ADDITIONAL_ARGS:-}
-        {% else %}
-          cargo build --target ${RUST_TARGET} -p ${PROJECT_NAME} ${RUST_BUILD_ADDITIONAL_ARGS:-}
-        {% endif %}
-      {% else %}
-        cargo build -p ${PROJECT_NAME} ${RUST_BUILD_ADDITIONAL_ARGS:-}
-      {% endif %}
     dependencies:
       - test
+      - build:current
+      - build:aarch64-unknown-linux-gnu
+      - build:x86_64-unknown-linux-gnu
+      - build:x86_64-apple-darwin
+      - build:aarch64-apple-darwin
+      - build:x86_64-pc-windows-msvc
+      - build:aarch64-pc-windows-msvc
 
 meta:
   targets:
-    aarch64-unknown-linux-gnu: {}
-    x86_64-unknown-linux-gnu: {}
-    x86_64-apple-darwin: {}
-    aarch64-apple-darwin: {}
-    x86_64-pc-windows-msvc: {}
-    aarch64-pc-windows-msvc: {}
+    x86_64-unknown-linux-gnu:
+      runner: ubuntu-latest
+    aarch64-unknown-linux-gnu:
+      runner: ubuntu-latest
+    x86_64-apple-darwin:
+      runner: macos-latest
+    aarch64-apple-darwin:
+      runner: macos-latest
+    x86_64-pc-windows-msvc:
+      runner: windows-latest
