chore: improve ts omni presets

--- a/omni/presets/ts.omni.yaml
+++ b/omni/presets/ts.omni.yaml
@@ -20,12 +20,14 @@ tasks:
 
   test:
     dependencies:
+      - ^test
       - test:unit
       - test:integration
 
   build:
     command: bun run build
     dependencies:
+      - test
       - ^build
     output:
       files:
